--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
+    "tailwindcss": "^0.6.1",
     "vue-cli-plugin-fontawesome": "~0.2.0",
+    "vue-cli-plugin-tailwindcss": "~0.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
