--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-purgecss": "^2.0.3",
     "prettier": "^1.19.1",
     "tailwindcss": "^0.6.1",
     "vue-cli-plugin-fontawesome": "~0.2.0",
